force-app/main/default/objects/Apttus_Config2__UserView__c/Apttus_Config2__UserView__c.object-meta.xml
<CustomObject>
    <description>Represents the view name and user/profile/UserRole details for the cart view.</description>
    <label>User View</label>
    <nameField>
        <label>User View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>