force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__GroupBy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupBy__c</fullName>
    <description>Captures the GroupBy field for the view setting record</description>
    <inlineHelpText>Captures the GroupBy field for the view setting record</inlineHelpText>
    <label>GroupBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>