force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__IsDefaultRecord__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsDefaultRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the default value for the record based on apex logic.This doesn&apos;t reflect the default attribute provided by the user.</description>
    <inlineHelpText>This field stores the default value for the record based on apex logic.This doesn&apos;t reflect the default attribute provided by the user.</inlineHelpText>
    <label>IsDefaultRecord</label>
    <type>Checkbox</type>
</CustomField>