force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__IsDefaultView__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsDefaultView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As we create individual records for roles/users/profiles added in the admin UI, introducing this field to track view level default attribute</description>
    <inlineHelpText>As we create individual records for roles/users/profiles added in the admin UI, introducing this field to track view level default attribute</inlineHelpText>
    <label>IsDefaultView</label>
    <type>Checkbox</type>
</CustomField>