force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProfileId__c</fullName>
    <description>Used to store profileIds as comma separated values</description>
    <inlineHelpText>Used to store profileIds as comma separated values</inlineHelpText>
    <label>ProfileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>