force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__RoleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RoleId__c</fullName>
    <description>Stores userrole ID</description>
    <inlineHelpText>Stores userrole ID</inlineHelpText>
    <label>RoleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>