force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__Source__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Source__c</fullName>
    <description>Indicates from which custom object the available columns come from.</description>
    <inlineHelpText>Indicates from which custom object the available columns come from.</inlineHelpText>
    <label>SourceObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>