force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>Used to store the cart view type (Public/Private/Protected)</description>
    <inlineHelpText>Used to store the cart view type (Public/Private/Protected)</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>