force-app/main/default/objects/Apttus_Config2__UserView__c/fields/Apttus_Config2__UserId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UserId__c</fullName>
    <description>Used to store users ID for the cart view as comma separator values.</description>
    <inlineHelpText>Used to store users ID for the cart view as comma separator values.</inlineHelpText>
    <label>UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>